[gd_scene load_steps=4 format=3 uid="uid://dn2tmew7fwnec"]

[ext_resource type="Script" path="res://Scenes/TerrainGeneration/terrain_generator.gd" id="1_nl4yv"]
[ext_resource type="Script" path="res://Scenes/TerrainGeneration/noise_generator.gd" id="2_pexda"]
[ext_resource type="Script" path="res://Scenes/TerrainGeneration/tile_mapper.gd" id="3_f38wx"]

[node name="TerrainGenerator" type="Node"]
script = ExtResource("1_nl4yv")

[node name="NoiseGenerator" type="Node" parent="."]
script = ExtResource("2_pexda")

[node name="TileMapper" type="Node" parent="."]
script = ExtResource("3_f38wx")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(-2048, 2048)
scale = Vector2(128, 128)

[connection signal="noise_ready" from="NoiseGenerator" to="TileMapper" method="_on_noise_generator_noise_ready"]
[connection signal="signal_sudoku" from="TileMapper" to="." method="_on_tile_mapper_signal_sudoku"]
